add virtual threads